Add content and social media links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <title>Levi Lunique Izidio da Silva</title>
     </head>
     <body>
+        <h1>Levi Lunique Izidio da Silva</h1>
+        <h4>Desenvolvedor Full-stack</h4>
+
+        <h2>Sobre mim</h2>
+        <p>Desenvolvedor com uma curiosidade inata e paixão pela tecnologia, estou sempre motivado a entender como as coisas funcionam em sua essência. Especializado em desenvolvimento Full-Stack Java e TypeScript, aprimorei minhas habilidades tanto em tecnologias de front-end quanto de back-end, com um forte enfoque em SpringBoot e na pilha MERN (MongoDB, Express, React, Node.js). Além disso, minha expertise se estende ao desenvolvimento mobile nativo, utilizando SwiftUI e UIKit para iOS e Jetpack Compose para Android.</p>
         
+        <h2>Gostos</h2>
+        <p>Desevolver jogos nas horas vagas, ler um bom livro e passar um tempo jogando com pessoas que amo</p>
+        
+        <h2>Redes sociais</h2>
+        <a href="https://www.linkedin.com/in/levi-lunique/">Linkedin</a>
+        <a href="https://github.com/LeviLunique/">Github</a>
     </body>
 </html>
