--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Levi Lunique Izidio da Silva</title>
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Levi Lunique Izidio da Silva</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="header">
         <h1>Levi Lunique Izidio da Silva</h1>
         <h4>Desenvolvedor Full-stack</h4>
+    </header>
 
-        <h2>Sobre mim</h2>
-        <p>Desenvolvedor com uma curiosidade inata e paixão pela tecnologia, estou sempre motivado a entender como as coisas funcionam em sua essência. Especializado em desenvolvimento Full-Stack Java e TypeScript, aprimorei minhas habilidades tanto em tecnologias de front-end quanto de back-end, com um forte enfoque em SpringBoot e na pilha MERN (MongoDB, Express, React, Node.js). Além disso, minha expertise se estende ao desenvolvimento mobile nativo, utilizando SwiftUI e UIKit para iOS e Jetpack Compose para Android.</p>
-        
-        <h2>Gostos</h2>
-        <p>Desevolver jogos nas horas vagas, ler um bom livro e passar um tempo jogando com pessoas que amo</p>
-        
-        <h2>Redes sociais</h2>
-        <a href="https://www.linkedin.com/in/levi-lunique/">Linkedin</a>
-        <a href="https://github.com/LeviLunique/">Github</a>
-    </body>
+    <main class="main-content">
+        <div class="content">
+            <section class="section">
+                <h2>Sobre mim</h2>
+                <p>Desenvolvedor com uma curiosidade inata e paixão pela tecnologia, estou sempre motivado a entender como as coisas funcionam em sua essência. Especializado em desenvolvimento Full-Stack Java e TypeScript, aprimorei minhas habilidades tanto em tecnologias de front-end quanto de back-end, com um forte enfoque em SpringBoot e na pilha MERN (MongoDB, Express, React, Node.js). Além disso, minha expertise se estende ao desenvolvimento mobile nativo, utilizando SwiftUI e UIKit para iOS e Jetpack Compose para Android.</p>
+            </section>
+
+            <section class="section">
+                <h2>Gostos</h2>
+                <p>Desenvolver jogos nas horas vagas, ler um bom livro e passar um tempo jogando com pessoas que amo.</p>
+            </section>
+
+            <section class="section">
+                <h2>Redes sociais</h2>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/levi-lunique/" class="social-button">
+                        <img src="linkedin-icon.png" alt="LinkedIn"> LinkedIn
+                    </a>
+                    <a href="https://github.com/LeviLunique/" class="social-button">
+                        <img src="github-icon.png" alt="GitHub"> GitHub
+                    </a>
+                </div>
+            </section>
+        </div>
+        <div class="image-container">
+            <img class="profile-image" src="Profile.jpeg" alt="Foto de Perfil do Levi">
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p>Developed by Levi Lunique.</p>
+    </footer>
+</body>
 </html>
